--- a/assets/theme/base.scss
+++ b/assets/theme/base.scss
@@ -23,6 +23,7 @@ $heading__levels: 1, 2, 3, 4, 5, 6;
     font-size: var(--theme-type-size--#{$h});
     font-weight: 800;
     margin: 0 auto var(--theme-spacing--2) 0;
+    text-transform: capitalize;
   }
 }
 h3 {
