--- a/assets/theme/forms.scss
+++ b/assets/theme/forms.scss
@@ -5,6 +5,7 @@ form {
   align-items: center;
   justify-content: center;
   gap: var(--theme-spacing--1);
+  margin-bottom: var(--theme-spacing--6);
 }
 
 input {
