--- a/assets/theme/breadcrumbs.scss
+++ b/assets/theme/breadcrumbs.scss
@@ -1,7 +1,9 @@
-.breadcrumbs__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  gap: var(--theme-spacing--gutter);
+.breadcrumbs {
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    gap: var(--theme-spacing--gutter);
+  }
 }
