rm darkmode, add permalinks
let people deeplink to pages

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,6 +11,11 @@
   </header>
 
   <section class="copy">{{.Content}}</section>
+  {{ if .Params.Link}}
+  <h5>
+    <a class="button button--submit" href="{{.Params.Link}}">{{.Title}}</a>
+  </h5>
+  {{end}}
 </article>
 
 {{ end }}
