--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,25 +16,24 @@
     </svg>
     <span class="is-invisible">Find us on GitHub</span>
   </a>
-
-  <button id="mode-toggle" class="button--toggle button--icon footer__mode">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      fill="none"
-      viewBox="0 0 24 24"
-      stroke-width="1.5"
-      stroke="currentColor"
-      class="e-icon e__button__icon e-icon--moon"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"
-      />
+  <h3>🚏 Signposts</h3>
+  <a class="button button--icon" href="{{.Site.BaseURL}}topics">
+    <span class="is-invisible">Topics</span>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+      <g data-name="47-List">
+        <path
+          d="M25 0H7a7 7 0 0 0-7 7v18a7 7 0 0 0 7 7h18a7 7 0 0 0 7-7V7a7 7 0 0 0-7-7zm5 25a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5h18a5 5 0 0 1 5 5z"
+        />
+        <path
+          d="M13 8h12v2H13zM13 15h12v2H13zM13 22h12v2H13z"
+          fill="currentcolor"
+        />
+        <circle cx="9" cy="9" r="2" />
+        <circle cx="9" cy="16" r="2" />
+        <circle cx="9" cy="23" r="2" />
+      </g>
     </svg>
-
-    <span class="is-invisible">Toggle between light and dark mode</span>
-  </button>
+  </a>
 </footer>
 
 <!-- 868 bytes -->
