--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,21 +25,5 @@
       </svg>
     </a>
   </h1>
-  {{/*
-  <nav class="header__nav">
-    <a class="button button--icon" href="{{.Site.BaseURL}}/regions">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-        <g data-name="47-List">
-          <path
-            d="M25 0H7a7 7 0 0 0-7 7v18a7 7 0 0 0 7 7h18a7 7 0 0 0 7-7V7a7 7 0 0 0-7-7zm5 25a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5h18a5 5 0 0 1 5 5z"
-          />
-          <path d="M13 8h12v2H13zM13 15h12v2H13zM13 22h12v2H13z" />
-          <circle cx="9" cy="9" r="2" />
-          <circle cx="9" cy="16" r="2" />
-          <circle cx="9" cy="23" r="2" />
-        </g>
-      </svg>
-    </a>
-  </nav>
-  */}}
+  {{ partial "search.html"}}
 </header>
