rejig script, add tags for subtopics

--- a/assets/theme/layout.scss
+++ b/assets/theme/layout.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
 
   &__main {
-    padding-top: var(--theme-spacing--6);
+    padding: var(--theme-spacing--3) 0;
   }
 
   &__header,
