--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -38,7 +38,7 @@
 
 <!-- 868 bytes -->
 {{ $scripts := resources.Match "scripts/*.js" | resources.Concat "app.js" }} {{
-$minifiedScripts := $scripts | minify | fingerprint "md5" }}
+$minifiedScripts := $scripts | fingerprint "md5" }}
 
 <script>
   // prettier-ignore
